@@ -1,15 +1,17 @@
-/*******************************************************************************
- * Copyright (c) 2016, 2018 Oracle and/or its affiliates. All rights reserved.
+/*
+ * Copyright (c) 2016, 2020 Oracle and/or its affiliates. All rights reserved.
+ *
  * This program and the accompanying materials are made available under the
- * terms of the Eclipse Public License v1.0 and Eclipse Distribution License v. 1.0
- * which accompanies this distribution.
- * The Eclipse Public License is available at http://www.eclipse.org/legal/epl-v10.html
- * and the Eclipse Distribution License is available at
+ * terms of the Eclipse Public License v. 2.0 which is available at
+ * http://www.eclipse.org/legal/epl-2.0,
+ * or the Eclipse Distribution License v. 1.0 which is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
  *
- * Contributors:
- *     Dmitry Kornilov - initial implementation
- ******************************************************************************/
+ * SPDX-License-Identifier: EPL-2.0 OR BSD-3-Clause
+ */
+
+// Contributors:
+//     Dmitry Kornilov - initial implementation
 package org.eclipse.persistence.testing.osgi;
 
 import org.ops4j.pax.exam.Option;
@@ -19,6 +21,7 @@ import static org.ops4j.pax.exam.CoreOptions.cleanCaches;
 import static org.ops4j.pax.exam.CoreOptions.junitBundles;
 import static org.ops4j.pax.exam.CoreOptions.mavenBundle;
 import static org.ops4j.pax.exam.CoreOptions.options;
+import static org.ops4j.pax.exam.CoreOptions.systemProperty;
 import static org.ops4j.pax.exam.CoreOptions.vmOptions;
 import static org.ops4j.pax.exam.CoreOptions.when;
 
@@ -35,15 +38,18 @@ public class OSGITestHelper {
     private static final String PLUGINS_DIR = System.getProperty("moxytest.2.common.plugins.dir");
     private static final String QUALIFIER = System.getProperty("build.qualifier", "qualifier");
     private static final String RELEASE_VERSION = System.getProperty("release.version", "2.7.0");
-    private static final String JAXB_API_JAR = System.getProperty("jaxb-api.jar", "javax.xml.bind_2.2.12.v201410011542.jar");
+    private static final String ACTIVATION_JAR = System.getProperty("activation.jar", "jakarta.activation.jar");
+    private static final String JAXB_API_JAR = System.getProperty("jaxb-api.jar", "jakarta.xml.bind-api.jar");
     private static final String JAXRS_JAR = System.getProperty("jaxrs.jar", "javax.ws.rs_1.1.1.v20101004-1200.jar");
-    private static final String ASM_JAR = System.getProperty("asm.jar", "org.eclipse.persistence.asm_6.1.1.v201804051226.jar");
-    private static final String BEAN_VALIDATION_LIB = System.getProperty("javax.validation.lib", "javax.validation.api_2.0.1.Final.jar");
+    private static final String ASM_JAR = System.getProperty("asm.jar", "org.eclipse.persistence.asm_8.0.1.v202005150941.jar");
+    private static final String ASM_VERSION = System.getProperty("asm.version", "7.1.0.v201909231337");
+    private static final String BEAN_VALIDATION_LIB = System.getProperty("javax.validation.lib", "jakarta.validation-api.jar");
 
     public static Option[] getDefaultOptions() {
         return options(
-                when(JavaSEPlatform.CURRENT.getMajor() >= 9).useOptions(vmOptions("--add-modules", "java.sql,java.xml.bind")),
+                systemProperty("asm.version").value(ASM_VERSION),
                 // JAXB API
+                bundle("file:" + PLUGINS_DIR + ACTIVATION_JAR),
                 bundle("file:" + PLUGINS_DIR + JAXB_API_JAR),
 
                 // JAX-RS API
@@ -60,13 +66,13 @@ public class OSGITestHelper {
 
     public static Option[] getOptionsWithBeanValidation() {
         return options(
-                when(JavaSEPlatform.CURRENT.getMajor() >= 9).useOptions(vmOptions("--add-modules", "java.sql,java.xml.bind")),
                 mavenBundle().groupId("org.hibernate.validator").artifactId("hibernate-validator").version("6.0.7.Final"),
                 mavenBundle().groupId("com.fasterxml").artifactId("classmate").version("1.3.1"),
                 mavenBundle().groupId("org.glassfish").artifactId("javax.el").version("3.0.1-b08"),
                 mavenBundle().groupId("org.jboss.logging").artifactId("jboss-logging").version("3.3.0.Final"),
 
                 // JAXB API
+                bundle("file:" + PLUGINS_DIR + ACTIVATION_JAR),
                 bundle("file:" + PLUGINS_DIR + JAXB_API_JAR),
 
                 // JAX-RS API
